stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__append_block_with_contract_upload_success.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
Success(ExpectedBlockOutput(
  transactions: [
    ExpectedTransactionOutput(
      return_type: Response(ResponseData(
        committed: true,
        data: Bool(true),
      )),
      cost: ExecutionCost(
        write_length: 13,
        write_count: 2,
        read_length: 1,
        read_count: 1,
        runtime: 8114,
      ),
    ),
  ],
  total_block_cost: ExecutionCost(
    write_length: 13,
    write_count: 2,
    read_length: 1,
    read_count: 1,
    runtime: 8114,
  ),
))
