stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__append_stx_transfers.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
Success(ExpectedBlockOutput(
  transactions: [
    ExpectedTransactionOutput(
      return_type: Response(ResponseData(
        committed: true,
        data: Bool(true),
      )),
      cost: ExecutionCost(
        write_length: 0,
        write_count: 0,
        read_length: 0,
        read_count: 0,
        runtime: 0,
      ),
    ),
    ExpectedTransactionOutput(
      return_type: Response(ResponseData(
        committed: true,
        data: Bool(true),
      )),
      cost: ExecutionCost(
        write_length: 0,
        write_count: 0,
        read_length: 0,
        read_count: 0,
        runtime: 0,
      ),
    ),
    ExpectedTransactionOutput(
      return_type: Response(ResponseData(
        committed: true,
        data: Bool(true),
      )),
      cost: ExecutionCost(
        write_length: 0,
        write_count: 0,
        read_length: 0,
        read_count: 0,
        runtime: 0,
      ),
    ),
  ],
  total_block_cost: ExecutionCost(
    write_length: 0,
    write_count: 0,
    read_length: 0,
    read_count: 0,
    runtime: 0,
  ),
))
