stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__chainstate_error_memory_balance_exceeded_during_contract_initialization.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "9e6488ca24675d73c36e453b667fbd2339abc6b33ba3aa1cdd922b89fd0e5c78",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9f279609060168e2618bfda974276e995bc3c9ed29414458ca29b6ff83f3dad4",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "41c7a246b208cba21592644be935281160a9227af527bf1398ec6a3bc440c39f",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "bbdc24ae1674d6e93c2408588a4195f4b2d146206c413c8ab17be283dc5f45e7",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e255bfeb7d3d773e90499323a7f4160a4d4b117deea84b5bd6d40d072d5068dd",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "5a6fcfaa08bc021dc9f68a92627a691fc9be83cca79a01a20c6c6ea3bbe6b448",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f7066329309ae8bdedd5e164fdaabb00ad927990c7e94456b22602672ce42892",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: test-exceeds-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(MemoryBalanceExceeded(100665826, 100000000)) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 2077,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 279102966,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 2077,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 279102966,
    ),
  )),
]
