stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__check_error_cost_balance_exceeded.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Failure("Invalid Stacks block afb3fc04ffeae6a2282b925c4f2d15dbf097d0f897216d55f020feacf61d13a2: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953286 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block 6d622979478896d36d7c7f95e5b25563e16b01431e0fef12c35a68aa41f12f44: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block b8709c0e888b0115790067bd98b22a23bb39856df28d64607f65556ca6a94097: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block 5f947f7b9b5fb10dfeb65b80af7d0834ee2d45e4a5e1ed99bcdb9562c18a97e9: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953286 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block b1a831538394bf3a62cc750b99896a64e9b42e180e7bcf9f9132b112acc060bf: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block 43e4ca7163c0985ef4e6b78cd1c55049ad607448b6f5adca0674cee386dc953b: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
  Failure("Invalid Stacks block 5f5589c88dc07eb78a293d4227732d41fcba3875399b05111b2073f92a3a2906: CostOverflowError(ExecutionCost { write_length: 0, write_count: 0, read_length: 0, read_count: 0, runtime: 0 }, ExecutionCost { write_length: 255117, write_count: 4, read_length: 270001, read_count: 15001, runtime: 17953285 }, ExecutionCost { write_length: 15000000, write_count: 15000, read_length: 100000000, read_count: 15000, runtime: 5000000000 })"),
]
