stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__check_error_kind_value_too_large.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "08fdefabcef0134a25b3b0069cee43a2f95764c76806066aadada4dd7e5f8567",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d6dd58f60ae2ea943ebd9e6cae0f44156f562b2599e4889cc957d9f273d8e98f",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7138a8f6ab4a474e996f8485f0432a2117b3d996bb7cd17842bd7ca95a1a3695",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "215b5ae1d1f726522dc6dfed4bae9a52ae5ef64662a48026bd5ccd19a67c84c7",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "066a6017f381674750ca2f50ccb4b7aa3ab0117ec9ad0c2eb58dd9f62eef4da3",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ca211897f91549c5b105079425f75c4b7ebe7a5c6fcda7ed6934dddd30ebe226",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "08378d0ef05482a88ea610c5df9a7ceae18b0cffa8883d9f687b6d278d15dcb4",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-too-large-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(ValueTooLarge) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 1472,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 84104599,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 1472,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 84104599,
    ),
  )),
]
