stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__error_invalid_stacks_transaction_duplicate_contract.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "2b22aef17602253bb687f99c7b4fcfb768b914a4881cf4268876815df4ec808d",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: contract-name, code_body: [..], clarity_version: None)",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 35,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 8817,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 35,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 8817,
    ),
  )),
  Failure("Invalid Stacks block 7292f0b8e51a012ced35b53f84bb5d49a77f094207ded52206f0b22e0488179e: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block b4282319a5d31899abf0adae46674ba12aab4014bfd39cc8ee774c96bf8e203d: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block b4e79672497ec2f75c214f11d438752a254ef39230d6f6d15b2980303c67c706: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block 424bd22e185de515489fa3ae787d05d42c764cc9f0ec8305660be3d98a486df8: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block 2c5c6e2d7c3ec0c834785f1fddded708d99f5113c5cc208d8782301ab4e40ebb: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block d3556ff730d25c9702927f8823dc60ce8edec663f37f093a0e458700ae7e5193: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
  Failure("Invalid Stacks block d3242b8a3ed0e303d80d00b9394846dfd566efeceb6cddd19c935501089b5b07: InvalidStacksTransaction(\"Duplicate contract \'ST1AW6EKPGT61SQ9FNVDS17RKNWT8ZP582VF9HSCP.contract-name\'\", false)"),
]
